Fix issue of element displaying on top of another on smaller screen

--- a/get-coffee/style.css
+++ b/get-coffee/style.css
@@ -194,7 +194,7 @@ div#scroll-down-svg {
   }
 }
 
-@media (max-height: 540px) {
+@media (max-height: 570px) {
   div#social-medias {
     position: initial;
   }
